# Board-Games

./: BoardGame.qmlproject  BoardGames.qmlproject  CMakeLists.txt  Main.qml  Misere.cpp  Misere.h  Misere.qml  MisereHelpers.js  PyramidHelper.js  PyramidTicTacToe.cpp  PyramidTicTacToe.h  PyramidTicTacToe.qml  TicTacToe5x5.cpp  TicTacToe5x5.h  TicTacToe5x5.qml  UltimateTicTacToe.cpp  UltimateTicTacToe.h  WordTicTacToe.cpp  WordTicTacToe.h  WordTicTacToe.qml  connect4.h  dic.txt  main.cpp  mainwindow.qml  mianwindow.qml  num_xo.h  resources.qrc  t5x5Helpers.js  t5x5backend.cpp  t5x5backend.h  xo4.h
BoardGame/: Constants.qml  qmldir
BoardGame/designer/: plugin.metainfo
BoardGameContent/: App.qml  Screen01.ui.qml
BoardGames/: Constants.qml  qmldir
BoardGames/designer/: plugin.metainfo
BoardGamesContent/: App.qml  Screen01.ui.qml
